[gd_scene load_steps=9 format=3 uid="uid://b8y7k4u5q6m7"]

[ext_resource type="Script" path="res://main.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://c6y7k4u5q6m7" path="res://CharacterVisuals.tscn" id="2_visuals"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_notch"]
bg_color = Color(0.16, 0.16, 0.21, 1)
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp"]
bg_color = Color(0.1, 0.1, 0.1, 0.5)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_fill"]
bg_color = Color(1, 0.29, 0.42, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mp_fill"]
bg_color = Color(0.31, 0.67, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_biome"]
bg_color = Color(1, 1, 1, 0.1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.2)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="WorldBackground" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Notch" type="Panel" parent="."]
custom_minimum_size = Vector2(160, 32)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_right = 80.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_notch")

[node name="HUDTop" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20

[node name="HBox" type="HBoxContainer" parent="HUDTop"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Portrait" type="Label" parent="HUDTop/HBox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "üõ°Ô∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusBars" type="VBoxContainer" parent="HUDTop/HBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="HUDTop/HBox/StatusBars"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Kaelen - Niv. 1"
uppercase = true

[node name="HPBar" type="ProgressBar" parent="HUDTop/HBox/StatusBars"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hp")
theme_override_styles/fill = SubResource("StyleBoxFlat_hp_fill")
value = 85.0
show_percentage = false

[node name="MPBar" type="ProgressBar" parent="HUDTop/HBox/StatusBars"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hp")
theme_override_styles/fill = SubResource("StyleBoxFlat_mp_fill")
value = 60.0
show_percentage = false

[node name="Currency" type="VBoxContainer" parent="HUDTop/HBox"]
layout_mode = 2
alignment = 1

[node name="StatusLabel" type="Label" parent="HUDTop/HBox/Currency"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.8)
theme_override_font_sizes/font_size = 10
text = "Explorando..."
horizontal_alignment = 2

[node name="GemLabel" type="Label" parent="HUDTop/HBox/Currency"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 14
text = "0 üíé"
horizontal_alignment = 2

[node name="WorldName" type="Label" parent="HUDTop/HBox/Currency"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.6)
theme_override_font_sizes/font_size = 10
text = "Aethelgard"
horizontal_alignment = 2

[node name="BiomeBadge" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 110.0
offset_right = 180.0
offset_bottom = 136.0
theme_override_styles/panel = SubResource("StyleBoxFlat_biome")

[node name="BiomeLabel" type="Label" parent="BiomeBadge"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "üìç DESFILADERO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sidebar" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -100.0
offset_right = -15.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 15

[node name="SideBtn1" type="Button" parent="Sidebar"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
text = "üó∫Ô∏è"

[node name="SideBtn2" type="Button" parent="Sidebar"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
text = "üìú"

[node name="SideBtn3" type="Button" parent="Sidebar"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
text = "üéÅ"

[node name="SideBtn4" type="Button" parent="Sidebar"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
text = "‚öôÔ∏è"

[node name="CharacterContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterVisuals" parent="CharacterContainer" instance=ExtResource("2_visuals")]
unique_name_in_owner = true
position = Vector2(100, 75)

[node name="MiniMap" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -190.0
offset_right = 100.0
offset_bottom = -110.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_biome")

[node name="NavBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -90.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="NavReino" type="Button" parent="NavBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "üè∞ Reino"

[node name="NavSaco" type="Button" parent="NavBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "üéí Saco"

[node name="ActionSphere" type="Button" parent="NavBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "‚öîÔ∏è"

[node name="NavEstilo" type="Button" parent="NavBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "üëï Estilo"

[node name="NavSocial" type="Button" parent="NavBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "üßô Social"

[node name="NotificationPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="NotificationPanel"]
layout_mode = 2
alignment = 1

[node name="NotificationText" type="Label" parent="NotificationPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Evento de Decisi√≥n"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="NotificationPanel/VBox"]
layout_mode = 2

[node name="Option1" type="Button" parent="NotificationPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Opci√≥n 1"

[node name="Option2" type="Button" parent="NotificationPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Opci√≥n 2"

[node name="CustomizationPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -220.0
offset_right = 160.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CustomizationPanel"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="CustomizationPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Personaliza tu personaje"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="CustomizationPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Nombre del personaje"
alignment = 1

[node name="Grid" type="GridContainer" parent="CustomizationPanel/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="LabelSkin" type="Label" parent="CustomizationPanel/VBox/Grid"]
layout_mode = 2
text = "Piel:"

[node name="SkinColor" type="ColorPickerButton" parent="CustomizationPanel/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 0.878431, 0.741176, 1)

[node name="LabelHairC" type="Label" parent="CustomizationPanel/VBox/Grid"]
layout_mode = 2
text = "Pelo:"

[node name="HairColor" type="ColorPickerButton" parent="CustomizationPanel/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.294118, 0.172549, 0.12549, 1)

[node name="LabelEyeC" type="Label" parent="CustomizationPanel/VBox/Grid"]
layout_mode = 2
text = "Ojos:"

[node name="EyeColor" type="ColorPickerButton" parent="CustomizationPanel/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="LabelOutfit" type="Label" parent="CustomizationPanel/VBox/Grid"]
layout_mode = 2
text = "Ropa:"

[node name="OutfitColor" type="ColorPickerButton" parent="CustomizationPanel/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.227451, 0.431373, 0.647059, 1)

[node name="LabelHair" type="Label" parent="CustomizationPanel/VBox/Grid"]
layout_mode = 2
text = "Peinado:"

[node name="HairStyle" type="OptionButton" parent="CustomizationPanel/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelEyes" type="Label" parent="CustomizationPanel/VBox/Grid"]
layout_mode = 2
text = "Ojos:"

[node name="EyeStyle" type="OptionButton" parent="CustomizationPanel/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelMouth" type="Label" parent="CustomizationPanel/VBox/Grid"]
layout_mode = 2
text = "Boca:"

[node name="MouthStyle" type="OptionButton" parent="CustomizationPanel/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelBody" type="Label" parent="CustomizationPanel/VBox/Grid"]
layout_mode = 2
text = "F√≠sico:"

[node name="BodyStyle" type="OptionButton" parent="CustomizationPanel/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ToggleModeButton" type="Button" parent="CustomizationPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "TOGGLE MODE"

[node name="ConfirmButton" type="Button" parent="CustomizationPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Empezar Aventura"
